--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.2",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.23",
+    "mysql2": "^3.16.0",
     "next": "^16.0.10",
     "notistack": "^3.0.2",
     "react": "19.1.0",
